Caption spacing fixed

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -658,7 +658,8 @@ h5 {
 	.b-section-caption {
 		color: $black;
 		font-size: 0.8rem;
-		float: right;
+		align-self: flex-end;
+		padding-top: 10px;
 		@include media-breakpoint-down('sm') {
 			font-size: 0.6rem;
 		}
